infra/services.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: invoice-build
spec:
  selector:
    app: web
  ports:
  - name: web
    port: 3000
    targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: eth-utils-api
  namespace: invoice-build
spec:
  selector:
    app: eth-utils-api
  ports:
  - name: eth-utils-api
    port: 3001
    targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: invoice-build
spec:
  selector:
    app: api
  ports:
  - name: api
    port: 5000
    targetPort: 5000
