infra/network.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: invoice-build
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - invoice.build
    - api.invoice.build
    secretName: invoice-build-tls
  rules:
  - host: invoice.build
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service: 
            name: web
            port: 
              number: 3000
  - host: api.invoice.build
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service: 
            name: api
            port: 
              number: 5000
